# android-studio-googletest

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
app/src/main/java/com/goldberg/googletest/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/cpp/: CMakeLists.txt  native-libTests.cpp
gradle/wrapper/: gradle-wrapper.properties
